--- a/pokedex-react/src/index.css
+++ b/pokedex-react/src/index.css
@@ -207,3 +207,31 @@
     opacity: 1;
     transition: opacity 1s;
 }
+
+.pokemondetail__details {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.pokemondetail__details__bottom {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0;
+    margin: 50px;
+}
+
+.pokemondetail__details__name {
+    font-size: 5rem;
+}
+
+.pokemondetail__details__types {
+    display: flex;
+}
+
+.pokemondetail__details__types>p {
+    font-size: 2rem;
+    color: white;
+}
