--- a/pokedex-react/src/index.css
+++ b/pokedex-react/src/index.css
@@ -210,6 +210,7 @@
 
 .pokemondetail__details {
     position: absolute;
+    top: 0;
     width: 100%;
     height: 100%;
     pointer-events: none;
@@ -235,3 +236,9 @@
     font-size: 2rem;
     color: white;
 }
+
+.pokemondetail__nav {
+    display: flex;
+}
+
+.pokemondetail__prev, .pokemondetail__next {}
