--- a/pokedex-react/src/index.css
+++ b/pokedex-react/src/index.css
@@ -77,7 +77,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.pokemoncard--topButtons>p {
     cursor: pointer;
+
 }
 
 .pokemoncard--sprite {
@@ -86,7 +90,6 @@
 
 .pokemoncard--3dVisibility {
     border-radius: 10px;
-    cursor: pointer;
 }
 
 .pokemoncard--3dVisibility>img {
